# esp32-remote-control-system

./: .cproject  .project  CMakeLists.txt  README.md  app.css  app.js  index.html  jquery-3.3.1.min.js  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  DHT22.c  DHT22.h  app_nvs.c  app_nvs.h  coding_style.c  coding_style.h  emqx_mqtt.c  emqx_mqtt.h  http_server.c  http_server.h  main.c  rgb_led.c  rgb_led.h  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/webpage/: app.css  app.js  index.html
